--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,44 @@
 baseURL = "https://hanadoc.vercel.app/"
 languageCode = "en-us"
 title = "hanadoc"
-theme = "Hermit-V2"
+theme = "hermit-v2"
+
+
+
+pygmentsCodefences  = true
+pygmentsUseClasses  = true
+enableEmoji = true
+
+[params]
+  dateform        = "Jan 2, 2006"
+  dateformShort   = "Jan 2"
+  dateformNum     = "2006-01-02"
+  dateformNumTime = "2006-01-02 15:04 -0700"
+  description = "CHANGE ME SITE DESCRIPTION"
+  themeColor = "#494f5c"
+
+  footerCopyright = "Higanhana Corp"
+
+  justifyContent = false
+
+  relatedPosts = true
+  code_copy_button = true
+
+  homeSubtitlePrinter = true
+  scrollToTop = true 
+  global_mathjax = false
+  readTime = true
+  readTimeSeparator = "CHANGE ME READ TIME"
+  # legacyLayout = false
+  shareSocial = true
+  # googleTagManager = "GTM-XXXXXXXX"
+  # tagSymbol = "#"
+  # categorySymbol = "⊲"
+  
+[menu]
+
+  [[menu.main]]
+    name = "Posts"
+    url = "posts/"
+    weight = 10
+
